@@ -2,6 +2,9 @@ update-manager (1:0.87.15) hardy; urgency=low
 
   * DistUpgrade/DistUpgradeCache.py:
     - fix fd leak 
+  * DistUpgrade/DistUpgradeController.py:
+    - abort when debsig-verify is installed, it makes any
+      upgrade fail (LP: #208957)
   * DistUpgrade/DistUpgradeViewKDE.py:
     - fix crash/race in terminal key press handler (LP: #205445)
   * UpdateManager/UpdateManager.py:
